carrito de compra

--- a/index.html
+++ b/index.html
@@ -71,8 +71,6 @@
     
 <!-- SECCION NOSOTROS -->
 
-
-    
     <section class="section" style="background-color: #000;">     
         <div class="container" id="nosotros">
             <h1 style=" 
@@ -158,6 +156,11 @@
            </div>
          </div>
         </div>
+      <!-- SECCION Carrito de compra -->
+
+
+
+
      </footer>
    
      <script src="https://cdnjs.cloudflare.com/ajax/libs/firebase/7.14.1-0/firebase.js"></script>
