--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <nav id="nav">
             <a href="#nosotros">Nosotros</a>
             <a href="#servicios">Paquetes</a>
-            <a href="#equipo">Comprar</a>
+            <a href="Projecto/CarritoCompra.html">Comprar</a>
             <a href="#contacto">Soporte</a>
         </nav>
     </header>
