--- a/Projecto/CarritoCompra.html
+++ b/Projecto/CarritoCompra.html
@@ -16,8 +16,8 @@
     </div>
 
     <nav>
-        <a href="#">Home</a>
-        <a href="#">Information</a>
+        <a href="/index.html">Home</a>
+        <a href="/index.html">Information</a>
         <a href="#">Sign In</a>
         <a href="#">Contact</a>
         <a href="#">Support</a>
