--- a/Projecto/CarritoCompra.html
+++ b/Projecto/CarritoCompra.html
@@ -16,11 +16,11 @@
     </div>
 
     <nav>
-        <a href="/index.html">Home</a>
+        <a href="/index.html">Inicio</a>
         <a href="/index.html">Information</a>
         <a href="#">Sign In</a>
-        <a href="#">Contact</a>
-        <a href="#">Support</a>
+        <a href="#">Contactos</a>
+        <a href="#">Soporte</a>
         <img src="images/carrito.png" alt="carritoCompras">
       </nav>
 
