--- a/Projecto/CarritoCompra.html
+++ b/Projecto/CarritoCompra.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="CarritoCompra.css">
   <script src="Carrito.js" defer></script>
-  <title>Carrito de Compras</title>
+  <title>BREWTOPIA</title>
   
 </head>
 <body>
