--- a/Projecto/beer.html
+++ b/Projecto/beer.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tu Página Web</title>
+    <title>BREWTOPIA</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
