--- a/index.html
+++ b/index.html
@@ -131,6 +131,9 @@
         </div>  
       </div>
     
+
+
+      <!-- SECCION  follow us-->
     <footer class="footer">
         <div class="container">
          <div class="row">
@@ -156,7 +159,7 @@
            </div>
          </div>
         </div>
-      <!-- SECCION Carrito de compra -->
+      
 
 
 
