--- a/Projecto/beer.html
+++ b/Projecto/beer.html
@@ -11,10 +11,12 @@
 
     <header>
         <div class="button-container">
-            <a href="#" class="button">Home</a>
-            <a href="#" class="button">Information</a>
-            <a href="#" class="button">Sign In</a>
-            <a href="#" class="button">Contact Support</a>
+            <a href="/index.html">Inicio</a>
+            <a href="/index.html">Information</a>
+            <a href="#">Sign In</a>
+            <a href="#">Contactos</a>
+            <a href="/index.html">Soporte</a>
+            <!-- <img src="images/carrito.png" alt="carritoCompras"> -->
         </div>
     </header>
 
