--- a/Projecto/html/CarritoCompra.html
+++ b/Projecto/html/CarritoCompra.html
@@ -3,9 +3,9 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="CarritoCompra.css">
-  <link rel="stylesheet" href="estilo.css">
-  <script src="Carrito.js" defer></script>
+  <link rel="stylesheet" href="../css/CarritoCompra.css">
+  <link rel="stylesheet" href="../css/estilo.css">
+  <script src="../javascript/Carrito.js" defer></script>
   <title>BREWTOPIA</title>
   
 </head>
@@ -13,16 +13,16 @@
 
   <header>
    <div class="header-img">
-    <img src="images/brewtopiaclean.png" alt="logo" class="logo">
+    <img src="../images/brewtopiaclean.png" alt="logo" class="logo">
     </div>
 
     <nav>
-        <a href="/index.html">Inicio</a>
-        <a href="/index.html">Information</a>
+        <a href="../html/index.html">Inicio</a>
+        <a href="../html/index.html">Information</a>
         <a href="#">Sign In</a>
         <a href="#">Contactos</a>
-        <a href="/index.html">Soporte</a>
-        <img src="images/carrito.png" alt="carritoCompras">
+        <a href="../html/index.html">Soporte</a>
+        <img src="../images/carrito.png" alt="carritoCompras">
       </nav>
 
 
@@ -77,7 +77,7 @@
 </div>
 
 <div class="product-panel" id="wineView">
-  <img src="images/wine.jpg" alt="Botella de Heineken" class="product-image">
+  <img src="../images/wine.jpg" alt="Botella de Heineken" class="product-image">
   <div class="product-details">
       <h2>Faust Cabernet Sauvignon</h2>
       <div class="price-container">
@@ -102,7 +102,7 @@
 </div>
 
 <div class="product-panel" id="beerView" style="display: none;">
-    <img src="images/heineken.jpg" alt="Botella de Heineken" class="product-image">
+    <img src="../images/heineken.jpg" alt="Botella de Heineken" class="product-image">
     <div class="product-details">
         <h2>Heineken</h2>
         <div class="price-container">
