--- a/Projecto/html/index.html
+++ b/Projecto/html/index.html
@@ -4,7 +4,7 @@
 
     <title>BREWTOPIA</title>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="estilo.css">
+    <link rel="stylesheet" href="../css/estilo.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css2?family=Dancing+Script&display=swap" rel="stylesheet">
 
@@ -22,7 +22,7 @@
         <nav id="nav">
             <a href="#nosotros">Nosotros</a>
             <a href="#servicios">Paquetes</a>
-            <a href="Projecto/CarritoCompra.html">Comprar</a>
+            <a href="../html/CarritoCompra.html">Comprar</a>
             <a href="#contacto">Soporte</a>
         </nav>
     </header>
@@ -39,27 +39,27 @@
                     </div>
                     <div class="carousel-inner">
                       <div class="carousel-item active">
-                        <img src="/imagenes/licores.jpg" class="d-block w-100" alt="..." style="height: 600px;">
+                        <img src="../images/licores.jpg" class="d-block w-100" alt="..." style="height: 600px;">
                         <div class="carousel-caption d-none d-md-block">
                           <h1><span class="hola">Cerveza premium</span></h1>
                           <h3> <span class="firstslide">"Las mejores Cervezas del mercado mundial"</span></h3>
                         </div>
                       </div>
                       <div class="carousel-item">
-                        <img src="/imagenes/cervezayvino.jpg" class="d-block w-100" alt="..." style="height: 600px;">
+                        <img src="../images/cervezayvino.jpg" class="d-block w-100" alt="..." style="height: 600px;">
                         <div class="carousel-caption d-none d-md-block">
                           <h3><span class="txt3">"Cervezas de alta calidad en el pais."</span></h3>
                         </div>
                       </div>
                       <div class="carousel-item"> 
-                        <img src="/imagenes/brew.jpg" class="d-block w-100" alt="..." style="height: 600px;">
+                        <img src="../images/brew.jpg" class="d-block w-100" alt="..." style="height: 600px;">
                         <div class="carousel-caption d-none d-md-block">
                           <h5 class="hola">BREWTOPIA</h5>
                           <h1 class="firstslide">El arte embotellado en cada sorbo.</h1>
                         </div>
                       </div>
                       <div class="carousel-item">
-                        <img src="/imagenes/frutos.jpg" class="d-block w-100" alt="..." style="height: 600px;">
+                        <img src="../images/frutos.jpg" class="d-block w-100" alt="..." style="height: 600px;">
                         <div class="carousel-caption d-none d-md-block">
                           
                           <h1 class="firstslide">Descubre el sabor del refinamiento.</h1>
@@ -167,6 +167,6 @@
      </footer>
    
      <script src="https://cdnjs.cloudflare.com/ajax/libs/firebase/7.14.1-0/firebase.js"></script>
-     <script src="./mail.js"></script>
+     <script src="../javascript/mail.js"></script>
 </body>
 </html>
