--- a/Projecto/html/index.html
+++ b/Projecto/html/index.html
@@ -20,10 +20,9 @@
       <header>
         <h1 class="logo">BREWTOPIA</h1>
         <nav id="nav">
-            <a href="#nosotros">Nosotros</a>
-            <a href="#servicios">Paquetes</a>
-            <a href="../html/CarritoCompra.html">Comprar</a>
-            <a href="#contacto">Soporte</a>
+          <a href="#nosotros">Nosotros</a>
+          <a href="Projecto/CarritoCompra.html">Comprar</a>
+          <a href="#contacto">Soporte</a>
         </nav>
     </header>
     </div>
