--- a/Projecto/html/index.html
+++ b/Projecto/html/index.html
@@ -23,6 +23,8 @@
             <a href="#nosotros">Nosotros</a>
             <a href="#servicios">Paquetes</a>
             <a href="../html/CarritoCompra.html">Comprar</a>
+            <a href="IniciarSesion.html">Iniciar Sesion</a>
+            <a href="registrarse.html">Registrarse</a>
             <a href="#contacto">Soporte</a>
         </nav>
     </header>
@@ -168,5 +170,6 @@
    
      <script src="https://cdnjs.cloudflare.com/ajax/libs/firebase/7.14.1-0/firebase.js"></script>
      <script src="../javascript/mail.js"></script>
+     <script src="../db.js"></script>
 </body>
 </html>
