--- a/Projecto/html/beer.html
+++ b/Projecto/html/beer.html
@@ -11,11 +11,11 @@
 
     <header>
         <div class="button-container">
-            <a href="../html/index.html">Inicio</a>
-            <a href="../html/index.html">Information</a>
+            <a href="index.html">Inicio</a>
+            <a href="index.html">Information</a>
             <a href="#">Sign In</a>
             <a href="#">Contactos</a>
-            <a href="../html/index.html">Soporte</a>
+            <a href="index.html">Soporte</a>
             <!-- <img src="images/carrito.png" alt="carritoCompras"> -->
         </div>
     </header>
