--- a/Projecto/html/adminPanel.html
+++ b/Projecto/html/adminPanel.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Dashboard de Administración</title>
-    <link rel="stylesheet" type="text/css" href="adminPanel.css">
+    <link rel="stylesheet" type="text/css" href="../css/adminPanel.css">
 </head>
 <body>
 
