--- a/Projecto/html/IniciarSesion.html
+++ b/Projecto/html/IniciarSesion.html
@@ -49,7 +49,7 @@
         <p>&copy; 2023 BREWTOPIA. Todos los derechos reservados.</p>
     </footer>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/firebase/7.14.1-0/firebase.js"></script>
-    <script src="../db.js"></script>
+    <script src="../javascript/firebase-config.js"></script>
     <script src="../javascript/IniciarSesion.js"></script>
 
 </body>
