--- a/Projecto/html/registrarse.html
+++ b/Projecto/html/registrarse.html
@@ -62,7 +62,7 @@
         <p>&copy; 2023 BREWTOPIA. Todos los derechos reservados.</p>
     </footer>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/firebase/7.14.1-0/firebase.js"></script>
-    <script src="../db.js"></script>
+    <script src="../javascript/firebase-config.js"></script>
     <script src="../javascript/registro.js"></script>
 </body>
 </html>
