--- a/Projecto/html/CarritoCompra.html
+++ b/Projecto/html/CarritoCompra.html
@@ -17,11 +17,11 @@
     </div>
 
     <nav>
-        <a href="../html/index.html">Inicio</a>
-        <a href="../html/index.html">Information</a>
-        <a href="#">Sign In</a>
+        <a href="index.html">Inicio</a>
+        <a href="index.html">Information</a>
+        <a href="IniciarSesion.html">Sign In</a>
         <a href="#">Contactos</a>
-        <a href="../html/index.html">Soporte</a>
+        <a href="index.html">Soporte</a>
         <img src="../images/carrito.png" alt="carritoCompras">
       </nav>
 
