--- a/Projecto/html/index.html
+++ b/Projecto/html/index.html
@@ -22,7 +22,7 @@
         <nav id="nav">
             <a href="#nosotros">Nosotros</a>
             <a href="#servicios">Paquetes</a>
-            <a href="../html/CarritoCompra.html">Comprar</a>
+            <a href="CarritoCompra.html">Comprar</a>
             <a href="#contacto">Soporte</a>
         </nav>
     </header>
@@ -166,8 +166,10 @@
 
      </footer>
    
-     <script src="https://cdnjs.cloudflare.com/ajax/libs/firebase/7.14.1-0/firebase.js"></script>
+     <script src="https://www.gstatic.com/firebasejs/8.4.3/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.4.3/firebase-auth.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.4.3/firebase-firestore.js"></script>
+    <script src="../javascript/firebase-config.js"></script>
      <script src="../javascript/mail.js"></script>
-     <script src="../db.js"></script>
 </body>
 </html>
