--- a/Projecto/html/productos.html
+++ b/Projecto/html/productos.html
@@ -3,8 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="CarritoCompra.css">
-    <link rel="stylesheet" href="estilo.css">
+    <link rel="stylesheet" href="../css/CarritoCompra.css">
     <title>Productos</title>
     <style>
         body {text-align: center;}
@@ -15,11 +14,11 @@
     
     <header>
         <div class="header-img">
-         <img src="images/brewtopiaclean.png" alt="logo" class="logo">
+         <img src="../images/brewtopiaclean.png" alt="logo" class="logo">
          </div>
      
          <nav>
-             <a href="/index.html">Inicio</a>
+             <a href="index.html">Inicio</a>
            </nav>
     </header>
 
@@ -88,8 +87,8 @@
     <script src="https://www.gstatic.com/firebasejs/8.4.3/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.4.3/firebase-auth.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.4.3/firebase-firestore.js"></script>
-    <script src="js/firebase-config.js"></script>
-    <script src="js/productos.js"></script>
+    <script src="../javascript/firebase-config.js"></script>
+    <script src="../javascript/productos.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.4.3/firebase-storage.js"></script>
 
 
