--- a/Projecto/html/registrarse.html
+++ b/Projecto/html/registrarse.html
@@ -61,7 +61,9 @@
     <footer>
         <p>&copy; 2023 BREWTOPIA. Todos los derechos reservados.</p>
     </footer>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/firebase/7.14.1-0/firebase.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.4.3/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.4.3/firebase-auth.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.4.3/firebase-firestore.js"></script>
     <script src="../javascript/firebase-config.js"></script>
     <script src="../javascript/registro.js"></script>
 </body>
