--- a/Projecto/html/index.html
+++ b/Projecto/html/index.html
@@ -167,9 +167,8 @@
      </footer>
    
      <script src="https://www.gstatic.com/firebasejs/8.4.3/firebase-app.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/8.4.3/firebase-auth.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/8.4.3/firebase-firestore.js"></script>
-    <script src="../javascript/firebase-config.js"></script>
+     <script src="https://www.gstatic.com/firebasejs/8.4.3/firebase-database.js"></script>
+     <script src="../javascript/firebase-config.js"></script>
      <script src="../javascript/mail.js"></script>
 </body>
 </html>
