firebase en html

--- a/Projecto/html/CarritoCompra.html
+++ b/Projecto/html/CarritoCompra.html
@@ -96,7 +96,7 @@
       
       <div class="cart-container">
           <span class="cart-counter">1</span>
-          <button class="add-to-cart-button">Agregar al Carrito</button>
+          <button class="add-to-cart-button" onclick="agregarAlCarrito()">Agregar al Carrito</button> 
       </div>
   </div>
 </div>
@@ -154,6 +154,10 @@
     </div>
   
  </footer>
+ <script src="https://www.gstatic.com/firebasejs/8.4.3/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.4.3/firebase-auth.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.4.3/firebase-firestore.js"></script>
+    <script src="../javascript/firebase-config.js"></script>
 
 </body>
 </html>
