--- a/Projecto/html/CarritoCompra.html
+++ b/Projecto/html/CarritoCompra.html
@@ -96,7 +96,7 @@
       
       <div class="cart-container">
           <span class="cart-counter">1</span>
-          <button class="add-to-cart-button" onclick="agregarAlCarrito()">Agregar al Carrito</button> 
+          <button class="add-to-cart-button" id="btnAgregar">Agregar al Carrito</button> 
       </div>
   </div>
 </div>
@@ -121,7 +121,7 @@
         
         <div class="cart-container">
             <span class="cart-counter">1</span>
-            <button class="add-to-cart-button">Agregar al Carrito</button>
+            <button class="add-to-cart-button" id="btnAgregar" >Agregar al Carrito</button>
         </div>
     </div>
 </div>
