--- a/Projecto/html/IniciarSesion.html
+++ b/Projecto/html/IniciarSesion.html
@@ -39,7 +39,7 @@
             </form>
             <div class="help-links">
                 <a href="#">¿Perdiste tu contraseña?</a>
-                <a href="#">¿Quieres crear una cuenta?</a>
+                <a href="registrarse.html">¿Quieres crear una cuenta?</a>
             </div>
         </section>
     </div>
