--- a/Projecto/html/IniciarSesion.html
+++ b/Projecto/html/IniciarSesion.html
@@ -38,7 +38,7 @@
                 </div>
             </form>
             <div class="help-links">
-                <a href="#">¿Perdiste tu contraseña?</a>
+                <a href="#" id="reset-password">¿Perdiste tu contraseña?</a>
                 <a href="registrarse.html">¿Quieres crear una cuenta?</a>
             </div>
         </section>
