--- a/Projecto/html/index.html
+++ b/Projecto/html/index.html
@@ -21,7 +21,7 @@
         <h1 class="logo">BREWTOPIA</h1>
         <nav id="nav">
             <a href="#nosotros">Nosotros</a>
-            <a href="#servicios">Paquetes</a>
+            <a href="IniciarSesion.html">Iniciar Sesion</a>
             <a href="CarritoCompra.html">Comprar</a>
             <a href="#contacto">Soporte</a>
         </nav>
