--- a/Projecto/html/CarritoCompra.html
+++ b/Projecto/html/CarritoCompra.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="../css/CarritoCompra.css">
-  <link rel="stylesheet" href="../css/estilo.css">
+  <link rel="stylesheet"  href="../css/estilo.css">
   <script src="../javascript/Carrito.js" defer></script>
   <title>BREWTOPIA</title>
   
@@ -18,8 +18,8 @@
 
     <nav>
         <a href="index.html">Inicio</a>
-        <a href="index.html">Information</a>
-        <a href="IniciarSesion.html">Sign In</a>
+        <a href="index.html">Informacion</a>
+        <a href="IniciarSesion.html">Iniciar Sesion</a>
         <a href="#">Contactos</a>
         <a href="index.html">Soporte</a>
         <img src="../images/carrito.png" alt="carritoCompras">
