--- a/Projecto/html/adminPanel.html
+++ b/Projecto/html/adminPanel.html
@@ -22,7 +22,7 @@
                 <li><a href="javascript:void(0);" onclick="openPanel('Usuarios')">Administrar Usuarios</a></li>
                 <li><a href="javascript:void(0);" onclick="openPanel('Productos')">Administrar Productos</a></li>
                 <li><a href="javascript:void(0);" onclick="openPanel('pedidos')">Administrar Pedidos</a></li>
-                <li><a href="javascript:void(0);" onclick="logout()">Cerrar Sesión</a></li>
+                <li><a href="javascript:void(0);" onclick="cerrarSesion()">Cerrar Sesión</a></li>
             </ul>
         </nav>
 
